--- a/express/package.json
+++ b/express/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^1.0.0"
+    "passport-local-mongoose": "^1.0.0",
+    "request": "^2.88.2"
   }
 }
